--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -46,7 +46,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
+      - name: Build and push docker image ${{ secrets.DOCKER_REPO }}:${{ github.event.inputs.tag }}
         uses: docker/build-push-action@v2
         with:
           push: true
