--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -9,17 +9,48 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build and Push Docker image to Docker Hub
     runs-on: ubuntu-18.04
 
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
+        id: extract_branch
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Check out the ${{ github.event.inputs.tag }} tag to build
+        uses: actions/checkout@v2
+        with:
+          ref: refs/tags/${{ github.event.inputs.tag }}
+
+      - name: Check out the ${{ steps.extract_branch.outputs.branch }} branch for Dockerfile
+        uses: actions/checkout@v2
+        with:
+          ref: ${{github.ref}}
+          path: main_branch
+
+      - name: Copy Dockerfile from ${{ steps.extract_branch.outputs.branch }} branch to ${{ github.event.inputs.tag }}
+        run: |
+          cp ${{ github. workspace }}/main_branch/Dockerfile Dockerfile
+          rm -rf ${{ github. workspace }}/main_branch
+
+      # GitHub Action to build and push Docker images with Buildx https://github.com/marketplace/actions/build-and-push-docker-images
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ secrets.DOCKER_REPO }}
-          tags: ${{ github.event.inputs.tag }}
+
+      - name: Build and push docker image ${{ secrets.DOCKER_REPO }}:${{ github.event.inputs.tag }}
+        uses: docker/build-push-action@v2
+        with:
+          platforms: linux/amd64
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_REPO }}:${{ github.event.inputs.tag }}
