--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "koa": "2.7.0",
     "koa-router": "7.4.0",
     "raw-body": "2.3.3",
-    "yargs": "15.3.1"
+    "yargs": "15.3.1",
+    "prom-client": "12.0.0"
   },
   "devDependencies": {
     "@types/bitcore-lib": "0.15.1",
